infra/k8s-dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
  rules:
    - host: volumetric.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/files/?(.*)
            pathType: Prefix
            backend:
              service:
                name: files-srv
                port:
                  number: 3000
          - path: /api/projects/?(.*)
            pathType: Prefix
            backend:
              service:
                name: projects-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
